--- a/L4.md
+++ b/L4.md
@@ -3,3 +3,8 @@ Laboratorio 4
 Integrantes: 
 Sebastian Herrera Esquivel - B93851
 Isaac Stalley - B97756
+
+En este laboratoiro se analiza un proceso estocastico de forma senosoidal.
+$$
+X(t)=C \cos (\Omega t+\Theta)
+$$
