--- a/L4.md
+++ b/L4.md
@@ -8,3 +8,7 @@ En este laboratoiro se analiza un proceso estocastico de forma senosoidal.
 $$
 X(t)=C \cos (\Omega t+\Theta)
 $$
+
+![x(t)][x(t).png]
+
+![Rxx(t, t + tau)][Rxx.png]
