--- a/L4.md
+++ b/L4.md
@@ -9,6 +9,6 @@ $$
 X(t)=C \cos (\Omega t+\Theta)
 $$
 
-![x(t)][x(t).png]
+![x(t)](x(t).png)
 
-![Rxx(t, t + tau)][Rxx.png]
+![Rxx(t, t + tau)](Rxx.png)
