--- a/L4.md
+++ b/L4.md
@@ -6,9 +6,5 @@ Isaac Stalley - B97756
 
 En este laboratoiro se analiza un proceso estocastico de forma senosoidal.
 
-$$
-
-X(t)=C \cos (\Omega t+\Theta)
-
-$$
+<img src="https://render.githubusercontent.com/render/math?math=e^{i \pi} = -1">
 
