--- a/L4.md
+++ b/L4.md
@@ -8,3 +8,6 @@ En este laboratoiro se analiza un proceso estocastico de forma senosoidal.
 
 <img src="https://render.githubusercontent.com/render/math?math=e^{i \pi} = -1">
 
+![x(t)][x(t).png]
+
+![Rxx(t, t + tau)][Rxx.png]
