--- a/L4.md
+++ b/L4.md
@@ -8,6 +8,8 @@ En este laboratoiro se analiza un proceso estocastico de forma senosoidal.
 
 <img src="https://render.githubusercontent.com/render/math?math=e^{i \pi} = -1">
 
+<img src="https://render.githubusercontent.com/render/math?math=%24%24%0AX(t)%3DC%20%5Ccos%20(%5COmega%20t%2B%5CTheta)%0A%24%24">
+
 ![x(t)](x(t).png)
 
 ![Rxx(t, t + tau)](Rxx.png)
