--- a/L4.md
+++ b/L4.md
@@ -6,8 +6,9 @@ Isaac Stalley - B97756
 
 En este laboratoiro se analiza un proceso estocastico de forma senosoidal.
 
-\textcolor{red}{<img src="https://render.githubusercontent.com/render/math?math=e^{i \pi} = -1">}
-
+<div class="alert-info">
+<img src="https://render.githubusercontent.com/render/math?math=e^{i \pi} = -1">
+</div>
 
 
 ![x(t)](x(t).png)
