--- a/L4.md
+++ b/L4.md
@@ -4,13 +4,18 @@ Integrantes:
 Sebastian Herrera Esquivel - B93851
 Isaac Stalley - B97756
 
-En este laboratoiro se analiza un proceso estocastico de forma senosoidal.
+En este laboratoiro se analiza un proceso estocastico de forma senosoidal X(t). Donde las variables aleatorias son C, Omega y Cita; ademas son estadisticamente independientes entre si.
 
-<div class="alert-info">
-<img src="https://render.githubusercontent.com/render/math?math=e^{i \pi} = -1">
-</div>
+En la primera parte se supone que Omega es una constante, donde arbitrariamente se elige el valor de w = 2*np.pi*60. 
+Dado que Cita cambia se deduce que el valor medio no va ser estacionario y va depender del tiempo.
 
-
+Seguidamente se modifica el codigo brindado por el profesor donde se crea el vector tiempo, y se crean 10 funciones del tiempo x(t) con t puntos.
+Finalmente se grafica el resultado teorico brindado por el ejercicio 4 y la funcion obtenida del promedio de las realizaciones en cada instante de tiempo. 
+ 
 ![x(t)](x(t).png)
 
+Del cual se observa que efectivamente depende del tiempo.
+
+
+En la segunda seccion del laboratorio se visualiza la autocorrelacion del proceso estocastico.
 ![Rxx(t, t + tau)](Rxx.png)
