--- a/L4.md
+++ b/L4.md
@@ -6,7 +6,9 @@ Isaac Stalley - B97756
 
 En este laboratoiro se analiza un proceso estocastico de forma senosoidal X(t). Donde las variables aleatorias son C, Omega y Cita; ademas son estadisticamente independientes entre si.
 
-En la primera parte se quiere visualizar el valor esperado. Se supone que Omega es una constante, donde arbitrariamente se elige el valor de w = 2*np.pi*60. 
+**En la primera parte se quiere visualizar el valor esperado.**
+
+Se supone que Omega es una constante, donde arbitrariamente se elige el valor de w = 2*np.pi*60. 
 
 Dado que Cita no es constante se deduce que el valor medio no va ser estacionario y va depender del tiempo.
 
@@ -18,5 +20,6 @@ Finalmente se grafica el resultado teorico brindado por el ejercicio 4 y la func
 Del cual se observa que efectivamente el valor esperado depende del tiempo y no es un valor constante, cambia con cada instante de tiempo.
 
 
-En la segunda seccion del laboratorio se visualiza la autocorrelacion del proceso estocastico.
+**En la segunda seccion del laboratorio se visualiza la autocorrelacion del proceso estocastico.**
+
 ![Rxx(t, t + tau)](Rxx.png)
