--- a/L4.md
+++ b/L4.md
@@ -1,8 +1,8 @@
 # Tema4
 Laboratorio 4
 Integrantes: 
-Sebastian Herrera Esquivel - B93851
-Isaac Stalley - B97756
+**Sebastian Herrera Esquivel - B93851
+Isaac Stalley - B97756**
 
 En este laboratoiro se analiza un proceso estocastico de forma senosoidal X(t). Donde las variables aleatorias son C, Omega y Cita; ademas son estadisticamente independientes entre si.
 
