--- a/L4.md
+++ b/L4.md
@@ -19,7 +19,7 @@ Finalmente se grafica el resultado teorico brindado por el ejercicio 4 y la func
  
 ![x(t)](x(t).png)
 
-Del cual se observa que efectivamente el valor esperado depende del tiempo y no es un valor constante, cambia con cada instante de tiempo.
+Del cual se observa que efectivamente el valor esperado depende del tiempo y no es un valor constante, en efecto el valor esperado cambia con cada instante de tiempo.
 
 
 **En la segunda seccion del laboratorio se visualiza la autocorrelacion del proceso estocastico.**
