--- a/L4.md
+++ b/L4.md
@@ -27,3 +27,5 @@ Del cual se observa que efectivamente el valor esperado depende del tiempo y no 
 ![Rxx(t, t + tau)](Rxx.png)
 
 Se supone Omega y Theta constantes, por tanto no se cumplen los requisitos de estacionaridad de primer, segundo orend o en sentido amplio y por tanto la autocorrelacion va depender del tiempo y no solamente de Tao. Finalmente se deduce que sus propiedades estadisticas efectivamente cambian en el tiempo.
+
+Theta = 1
