--- a/L4.md
+++ b/L4.md
@@ -10,7 +10,7 @@ En este laboratoiro se analiza un proceso estocastico de forma senosoidal X(t). 
 
 **En la primera parte se quiere visualizar el valor esperado.**
 
-Se supone que Omega es una constante, donde arbitrariamente se elige el valor de w = 2*np.pi*60. 
+Se supone que Omega es una constante, donde arbitrariamente se elige el valor de w = \pi. 
 
 Dado que Theta no es constante se deduce que el valor medio no va ser estacionario y va depender del tiempo.
 
