--- a/L4.md
+++ b/L4.md
@@ -10,7 +10,7 @@ En este laboratoiro se analiza un proceso estocastico de forma senosoidal X(t). 
 
 **En la primera parte se quiere visualizar el valor esperado.**
 
-Se supone que Omega es una constante, donde arbitrariamente se elige el valor de w = \pi. 
+Se supone que Omega es una constante, donde arbitrariamente se elige el valor de w = 2*pi*60. 
 
 Dado que Theta no es constante se deduce que el valor medio no va ser estacionario y va depender del tiempo.
 
@@ -26,6 +26,8 @@ Del cual se observa que efectivamente el valor esperado depende del tiempo y no 
 
 ![Rxx(t, t + tau)](Rxx.png)
 
-Se supone Omega y Theta constantes, por tanto no se cumplen los requisitos de estacionaridad de primer, segundo orend o en sentido amplio y por tanto la autocorrelacion va depender del tiempo y no solamente de Tao. Finalmente se deduce que sus propiedades estadisticas efectivamente cambian en el tiempo.
+Se supone Omega y Theta constantes, por tanto no se cumplen los requisitos de estacionaridad de primer, segundo orend o en sentido amplio y por consiguiente la autocorrelacion va depender del tiempo y no solamente de Tao, Theta = 1.
 
-Theta = 1
+Finalmente se deduce que sus propiedades estadisticas efectivamente cambian en el tiempo.
+
+
