--- a/L4.md
+++ b/L4.md
@@ -21,12 +21,11 @@ Finalmente se grafica el resultado teorico brindado por el ejercicio 4 y la func
 
 Del cual se observa que efectivamente el valor esperado depende del tiempo y no es un valor constante, en efecto el valor esperado cambia con cada instante de tiempo.
 
-
 **En la segunda seccion del laboratorio se visualiza la autocorrelacion del proceso estocastico.**
 
 ![Rxx(t, t + tau)](Rxx.png)
 
-Se supone Omega y Theta constantes, por tanto no se cumplen los requisitos de estacionaridad de primer, segundo orend o en sentido amplio y por consiguiente la autocorrelacion va depender del tiempo y no solamente de Tao, Theta = 1.
+Se supone Omega y Theta constantes, por tanto no se cumplen los requisitos de estacionaridad de primer, segundo orden o en sentido amplio y por consiguiente la autocorrelacion va depender del tiempo y no solamente de Tao, Theta = 1.
 
 Finalmente se deduce que sus propiedades estadisticas efectivamente cambian en el tiempo.
 
