--- a/L4.md
+++ b/L4.md
@@ -25,7 +25,7 @@ Del cual se observa que efectivamente el valor esperado depende del tiempo y no 
 
 ![Rxx(t, t + tau)](Rxx.png)
 
-Se supone Omega y Theta constantes, por tanto no se cumplen los requisitos de estacionaridad de primer, segundo orden o en sentido amplio y por consiguiente la autocorrelacion va depender del tiempo y no solamente de Tau, Theta = 1.
+Se supone Omega y Theta constantes, por tanto no se cumplen los requisitos de estacionaridad de primer, segundo orden o en sentido amplio y por consiguiente la autocorrelacion va depender del tiempo y no solamente de Tau; Theta = 1.
 
 Finalmente se deduce que sus propiedades estadisticas efectivamente cambian en el tiempo.
 
